package org.example.model;

public enum RoomType {
    SINGLE,
    DOUBLE,
    SUITE
}
